# secrets

./: .gitignore  README.md  default.nix  pyproject.toml
secretscli/: secrets.py
