[tool.poetry]
name = "secrets"
version = "0.1.0"
description = ""
authors = ["Ronith Kandallu <ronithkandallu@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ronithk/secrets"
packages = [{ include = "secrets" }]

[tool.poetry.scripts]
secrets = 'secrets.secrets:main'

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
